--- a/AppExemploXamarinQRCode/MainPage.xaml
+++ b/AppExemploXamarinQRCode/MainPage.xaml
@@ -7,10 +7,10 @@
              x:Class="AppExemploXamarinQRCode.MainPage">
 
     <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <Label x:Name="LblQrCode" Text="Welcome to Xamarin.Forms! By:Thallison Rhanniel"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
+        <Button Text="Scanner" Clicked="Button_Clicked"></Button>
     </StackLayout>
 
 </ContentPage>
